--- a/.env
+++ b/.env
@@ -1,2 +1,9 @@
+DEBUG=True
 AI_BASE_URL=http://192.168.31.148:1234
 AI_MODEL=llama-3.2-3b-instruct-q4_k_m
+SECRET_KEY=django-insecure-ltxr%(zs(q315o5k)rv$_==z)oaut=^2#x89f!_v^boyx1!i#w
+DATABASE_NAME=chat_ai_db
+DATABASE_USER=chat_ai_user
+DATABASE_PASSWORD=pass@1234
+DATABASE_HOST=localhost
+DATABASE_PORT=5432
